# SmartML

./: .gitignore  CONTRIBUTING.md  LICENSE  READMD.md  benchmark.py  pyproject.toml
SmartEco/: requirements.txt
SmartEco/SmartML/: __init__.py  inspect.py  model_evaluation.py  model_splitting.py  model_training.py  smarteco_encoding.py
SmartEco/SmartML/models/: BaseLine_Reg.py  BaseLines_Class.py  DL_Class.py  DL_Reg.py  SmartKNN.py  Trees_Class.py  Trees_Reg.py  base.py  registry.py
SmartEco/tests/: test_encoding.py  test_evaluation.py  test_imports.py  test_registry.py  test_smoke_classification.py  test_smoke_regression.py
