[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SmartEco"
version = "0.1.0"
description = "SmartEco ecosystem: CPU-first machine learning benchmarking and tooling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "SmartEco" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://thatipamula-jashwanth.github.io/SmartEco/"
