[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SmartEco"
version = "0.1.1"
description = "SmartEco ecosystem: CPU-first machine learning benchmarking and tooling"
readme = "ReadMe.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "SmartEco" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.23,<3.0",
  "pandas>=1.5,<3.0",
  "scikit-learn>=1.2,<2.0",

  "psutil>=5.9,<6.0",
  "openml>=0.14,<1.0",

  "smart-knn>=0.2.0",
]

[project.optional-dependencies]

tree = [
  "lightgbm>=4.0,<5.0",
  "xgboost>=2.0,<3.0",
  "catboost>=1.2,<2.0",
]

interpret = [
  "interpret>=0.5,<1.0",
]

dl = [
  "torch>=2.0,<3.0",
  "pytorch-tabnet>=4.1,<5.0",
]

all = [
  "lightgbm>=4.0,<5.0",
  "xgboost>=2.0,<3.0",
  "catboost>=1.2,<2.0",
  "interpret>=0.5,<1.0",
  "torch>=2.0,<3.0",
  "pytorch-tabnet>=4.1,<5.0",
]

[project.urls]
Homepage = "https://thatipamula-jashwanth.github.io/SmartEco/"
